[tool.poetry]
name = "aiodnsbl"
version = "0.1.0"
description = "Async DNSBL lists checker"
authors = ["Manabu Niseki <manabu.niseki@gmail.com>"]
license = "MIT"
homepage = "https://github.com/ninoseki/aiodnsbl"
repository = "https://github.com/ninoseki/aiodnsbl"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
aiodns = "^3.0.0"
idna = "^3.2"
poetry-version = "^0.1.5"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
autopep8 = "^1.5.7"
black = "^21.7b0"
coveralls = "^3.2.0"
flake8 = "^3.9.2"
isort = "^5.9.3"
mypy = "^0.910"
pre-commit = "^2.14.0"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"
pytest-randomly = "^3.10.1"
pytest-sugar = "^0.9.4"
pyupgrade = "^2.24.0"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
