[tool.poetry]
name = "aiodnsbl"
version = "0.1.1"
description = "Async DNSBL lists checker"
authors = ["Manabu Niseki <manabu.niseki@gmail.com>"]
license = "MIT"
homepage = "https://github.com/ninoseki/aiodnsbl"
repository = "https://github.com/ninoseki/aiodnsbl"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
aiodns = "^3.0.0"
idna = "^3.2"
importlib-metadata = {version = "^4.8.1", python = "<3.8"}

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
autopep8 = "^1.5.7"
black = "^21.9b0"
coveralls = "^3.2.0"
flake8 = "^3.9.2"
isort = "^5.9.3"
mypy = "^0.910"
pre-commit = "^2.15.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.1"
pytest-randomly = "^3.10.1"
pytest-sugar = "^0.9.4"
pyupgrade = "^2.29.0"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
